[package]
name = "naumachia"
description = "Cardano Smart-Contract Framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Mitchell Turner"]
license = "Apache-2.0"
repository = "https://github.com/MitchTurner/naumachia"

[workspace]
members = [
    "sample-dApps/*",
    "trireme",
    "nau-scripts",
]

[dependencies]
bech32 = "0.9.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_with = {version = "2.0.0", features = ["json"]}
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
url = "2.2.2"
toml = "0.5.9"
tiny-bip39 = "1.0.0"
futures = "0.3.23"
async-trait = "0.1.57"
hex = "0.4.3"
dirs = "4.0.0"
uplc = "0.0.28"
tempfile = "3.3.0"
minicbor = "0.18.0"
rand = "0.8.5"
pallas-addresses = "0.17.0"

[dependencies.blockfrost-http-client]
version = "0.0.11"
git = "https://github.com/MitchTurner/blockfrost-http-client.git"
rev = "c32ef258ede02ed0c05ee8eef32a11a70770c361"

[dependencies.cardano-multiplatform-lib]
version = "3.1.1"
git = "https://github.com/dcSpark/cardano-multiplatform-lib.git"
rev = "685354495562ff879101fd023eb89555db9bbb1e"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
clap = { version = "3.2.16", features = ["derive"] }
proptest = "1.0.0"
rand = "0.8.5"
sha2 = "0.10.6"

[patch.crates-io]
uplc = { version = "0.0.28", git = "https://github.com/aiken-lang/aiken.git", branch = "main"}
aiken = { version = "0.0.28", git = "https://github.com/aiken-lang/aiken.git", branch = "main"}
aiken-project = { version = "0.0.28", git = "https://github.com/aiken-lang/aiken.git", branch = "main"}

#[patch."https://github.com/aiken-lang/aiken.git"]
#aiken = { version = "0.0.28", path = "../aiken-lang/aiken/crates/aiken"}
#aiken-project = { version = "0.0.28", path = "../aiken-lang/aiken/crates/aiken-project" }
#uplc = { version = "0.0.28", path = "../aiken-lang/aiken/crates/uplc" }

#[patch."https://github.com/MitchTurner/blockfrost-http-client.git"]
#blockfrost-http-client = { version = "0.0.11", path = "../blockfrost-http-client"}
#
#[patch."https://github.com/dcSpark/cardano-multiplatform-lib.git"]
#cardano-multiplatform-lib = { version = "3.1.1", path = "../forks/cardano-multiplatform-lib/rust"}