[package]
name = "always-succeeds-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "always"
path = "src/lib.rs"

[[bin]]
name = "always-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
blockfrost-http-client = "0.0.4"
cardano-multiplatform-lib = "3.0.1"
clap = { version = "3.2.16", features = ["derive"] }
hex = "0.4.3"
naumachia = {path = ".."}
serde = { version = "1.0.143", features = ["derive"] }
serde_with = {version = "2.0.0", features = ["json"]}
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }