[package]
name = "blockfrost-http-client"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
cardano-multiplatform-lib = { version = "3.0.1"}
futures = "0.3.23"
hex = "0.4.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_with = {version = "2.0.0", features = ["json"]}
serde_json = "1.0"
reqwest = { version = "0.11.11", features = ["json"] }
thiserror = "1.0.24"
tiny-bip39 = "1.0.0"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
url = "2.2.2"
