[package]
name = "trireme"
description = "Cardano Wallet and dApp Manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
dialoguer = "0.10.2"
naumachia = {path = "..", version = "0.2.0"}
tokio = { version = "1.20.1", features = ["full"] }
uuid = "1.3.0"
