[package]
name = "trireme"
description = "Cardano Wallet and dApp Manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
dialoguer = "0.10.2"
hex = "0.4.3"
naumachia = {path = "..", version = "0.2.0"}
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.20.1", features = ["full"] }
