[package]
name = "always-succeeds-contract"
description = "Always-Succeeds Script Cardano dApp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "always-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
aiken-project = { git = "https://github.com/aiken-lang/aiken.git", branch = "main"}
uplc = { git = "https://github.com/aiken-lang/aiken.git", branch = "main"}

miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"

[dependencies]
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
naumachia = {path = "../..", version = "0.2.0"}
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.20.1", features = ["full"] }
