[package]
name = "mint-nft"
description = "dApp for minting simple one-shot nfts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mint-nft-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
aiken = "1.0.2-alpha"
aiken-project = "1.0.2-alpha"
uplc = "1.0.2-alpha"

miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"

[dependencies]
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
naumachia = {path = "../..", version = "0.2.0"}
nau-scripts = { path = "../../nau-scripts", version = "0.1.0" }
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.20.1", features = ["full"] }
hex = "0.4.3"
