[package]
name = "time-locked-contract"
description = "Time Locked Script Cardano dApp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "time-locked-cli"
path = "src/main.rs"

[build-dependencies]
aiken = "0.0.28"
aiken-project = "0.0.28"
uplc = "0.0.28"

miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"

[dependencies]
async-trait = "0.1.57"
clap = { version = "3.2.16", features = ["derive"] }
hex = "0.4.3"
naumachia = {path = "../..", version = "0.2.0"}
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.20.1", features = ["full"] }
